--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <variable
+            name="mainViewModel"
+            type="com.ocfulfillment.fulfillmentapp.ui.viewmodel.MainViewModel" />
+    </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,10 +16,11 @@
 
         <ImageView
             android:id="@+id/imageView_login_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
+            android:layout_width="300dp"
+            android:layout_height="69.434176855274dp"
+            android:layout_marginTop="96dp"
             android:src="@drawable/ic_logo"
+            android:contentDescription="@string/contentDescription_login_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,13 +37,16 @@
             app:endIconDrawable="@android:drawable/ic_dialog_email"
             app:endIconMode="custom"
             app:endIconTint="@color/fulfillmentToolsBrightBlue"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageView_login_logo">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:text="@={mainViewModel.email}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -51,13 +61,16 @@
             app:endIconDrawable="@android:drawable/ic_lock_idle_lock"
             app:endIconMode="custom"
             app:endIconTint="@color/fulfillmentToolsBrightBlue"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textInputLayout_login_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:text="@={mainViewModel.password}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +90,7 @@
             android:id="@+id/button_login_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="48dp"
             android:background="@drawable/shape_button_round"
             android:text="@string/button_login_login"
             android:textColor="@color/white"
