--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -98,5 +98,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView_login_forgotPassword" />
 
+        <ProgressBar
+            android:id="@+id/progressBar_login_buttonLoading"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:elevation="4dp"
+            android:layout_margin="4dp"
+            app:layout_constraintStart_toStartOf="@id/button_login_login"
+            app:layout_constraintTop_toTopOf="@id/button_login_login"
+            app:layout_constraintEnd_toEndOf="@id/button_login_login"
+            app:layout_constraintBottom_toBottomOf="@id/button_login_login"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
