--- a/app/src/main/res/layout/fragment_pick_jobs.xml
+++ b/app/src/main/res/layout/fragment_pick_jobs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -12,5 +12,14 @@
             android:layout_height="match_parent"
             tools:itemCount="4"
             tools:listitem="@layout/list_item_pick_job" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_listItem_statusLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
