Implement minor changes/fixes

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -70,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:imeOptions="actionSend"
                 android:text="@={mainViewModel.password}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
